Removed more MDC classes

--- a/configuration/templates/account/reset-password.hbs
+++ b/configuration/templates/account/reset-password.hbs
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="x-padding">
-    <div class="mdc-typography--body1" id="form-section-email">
+    <div id="form-section-email">
       <div class="form-group has-icon-left">
         <input class="form-input" type="email" id="reset-password-email" placeholder="Email" required />
         <span class="form-icon far fa-at"></span>
