--- a/configuration/templates/account/footer.hbs
+++ b/configuration/templates/account/footer.hbs
@@ -1,37 +1,26 @@
 {{!-- contains useful functions for account operations. E.g. send out PV email --}}
-
 <script>
-    function sendApprovalEmail(message) {
-      $.ajax({
-        url: '/approval-email-send',
-        type: 'POST',
-      }).done(function (data) {
-        if (message){saltireawards.componentsInitialiser.snackbar.show({message:"Approval email re-sent"})};
-      }).fail(function (err) {
-        if (message){saltireawards.componentsInitialiser.snackbar.show({message:"There was a problem re-sending your approval email"})};
-      });
-    }
+  function sendApprovalEmail(message) {
+    $.ajax({
+      url: '/approval-email-send',
+      type: 'POST',
+    }).done(function (data) {
+      if (message){saltireawards.componentsInitialiser.snackbar.show({message:"Approval email re-sent"})};
+    }).fail(function (err) {
+      if (message){saltireawards.componentsInitialiser.snackbar.show({message:"There was a problem re-sending your approval email"})};
+    });
+  }
 
-    function postcodeMDCHack(){ //Try to make postcode field behave itself.
-      $('#postcode').parent().parent()[0].MDCTextField.foundation_.setValid(true);
-      setTimeout(function() {
-        $('#detail-submit').focus();
-      }, 100)
-      $('#detail-submit').prop('disabled', false);
-    }
-
-    function completeAccountCB(response){
-      postcodeMDCHack();
-      var jsonData = JSON.parse(response);
-      if (jsonData.id && jsonData.errors.length === 0){
-        if (jsonData.approval){
-          sendApprovalEmail();
-        }
-        window.location.href = '/';
-      } else {
-        $('#detail-submit').prop('disabled', false);
-        saltireawards.componentsInitialiser.snackbar.show({message:"Failed to update profile, please check all the form fields have been filled in correctly"});
+  function completeAccountCB(response){
+    var jsonData = JSON.parse(response);
+    if (jsonData.id && jsonData.errors.length === 0){
+      if (jsonData.approval){
+        sendApprovalEmail();
       }
+      window.location.href = '/';
+    } else {
+      $('#detail-submit').prop('disabled', false);
+      // saltireawards.componentsInitialiser.snackbar.show({message:"Failed to update profile, please check all the form fields have been filled in correctly"});
     }
-
+  }
 </script>
