--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -36,12 +36,12 @@
       <button class="btn btn-primary" type="submit" id="sign-in-submit">
         Sign in
       </button>
-      <div class="v-margin-full">
+      <p class="v-margin-full">
         Forgot your password? <a href="/reset-password">Reset password</a>
-      </div>
-      <div class="v-margin-full">
+      </p>
+      <p class="v-margin-full">
         Read our <a href="/privacy" target="_blank">privacy notice</a>
-      </div>
+      </p>
       <h2>
         Not registered?
       </h2>
