--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -34,12 +34,12 @@
       <button class="btn btn-primary" type="submit" id="sign-up-submit">
         Sign up
       </button>
-      <div class="v-margin-full">
+      <p class="v-margin-full">
         Read our <a href="/privacy" target="_blank">privacy notice</a>
-      </div>
-      <div class="v-margin-full">
+      </p>
+      <p class="v-margin-full">
         Already have an account? <a href="/sign-in">Sign in</a>
-      </div>
+      </p>
     </div>
     <div class="card-loader" id="sign-up-loader">
       <div class="card-loader-background"></div>
