--- a/configuration/templates/pages/home-authenticated.hbs
+++ b/configuration/templates/pages/home-authenticated.hbs
@@ -16,7 +16,7 @@
   </p>
   {{else}}
   <p>
-    <a href="/hours" class="btn btn-primary">My volunteering - submit hours</a><br />
+    <a href="/hours" class="btn btn-primary">My volunteering - submit hours</a>
     <a href="/search" class="btn">Find a volunteering opportunity</a>
   </p>
   {{/if ~}}
