--- a/configuration/templates/account/sign-up-details.hbs
+++ b/configuration/templates/account/sign-up-details.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid b-padding-full v-margin-full">
+<div class="container b-padding-full v-margin-full">
   <h1>Add your details</h1>
 
   <h3 class="b-margin-full">
@@ -17,9 +17,14 @@
     {{>account_details_form_fields admin=data.adminCandidate}}
     <input type="hidden" name="signup" value="true">
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
-    <button id="detail-submit" class="btn btn-primary b-margin-full" id="register-interest-submit" type="submit">
-      Submit details
-    </button>
+    <div class="columns col-gapless">
+      <div class="col-3"></div>
+      <div class="col-2">
+        <button id="detail-submit" class="btn btn-primary b-margin-full" id="register-interest-submit" type="submit">
+          Submit details
+        </button>
+      </div>
+    </div>
   </form>
 </div>
 {{!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> --}}
