--- a/configuration/partials/account/sign-out-loader.hbs
+++ b/configuration/partials/account/sign-out-loader.hbs
@@ -1,8 +1,5 @@
-<form id="sign-out-form" method="POST" class="authentication-form container-fluid">
-  <div class="card-loader" id="sign-out-loader">
-    <div class="card-loader-background"></div>
-    <div class="card-loader-inner">
-      <span class="far fa-2x fa-spinner-third fa-spin"></span>
-    </div>
+<form id="sign-out-form" method="POST" class="authentication-form container">
+  <div class="form-group">
+    <span class="form-icon loading"></span>
   </div>
 </form>
