--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="authentication-form container-fluid">
+<form id="sign-up-form" method="POST" class="authentication-form container">
   <h1 class="x-padding">
     Sign up
   </h1>
@@ -41,12 +41,6 @@
         Already have an account? <a href="/sign-in">Sign in</a>
       </p>
     </div>
-    <div class="card-loader" id="sign-up-loader">
-      <div class="card-loader-background"></div>
-      <div class="card-loader-inner">
-        <span class="far fa-2x fa-spinner-third fa-spin"></span>
-      </div>
-    </div>
   </div>
   <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
@@ -65,7 +59,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
   var $passwordIcon = $('#sign-up-password-icon');
   var $passwordConfirmIcon = $('#sign-up-password-confirm-icon');
   var $register = $('#sign-up-submit');
-  var $loader = $('#sign-up-loader');
 
   function hasSubscriptions() {
     return ($("input[name^='list']:checked")).length > 0;
