contacts page improvements

--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -21,7 +21,7 @@
     {{#ifAll logo website ~}}
     <div class="col-3">
       <p class="r-margin-full">
-        <a href="{{fixUrl website}}" target="_blank"><img src="{{logo}}" class="responsive-img" alt="{{title}}" /></a>
+        <a href="{{fixUrl website}}" target="_blank"><img src="{{logo}}" class="img-responsive" alt="{{title}}" /></a>
       </p>
     </div>
     {{/ifAll ~}}
