--- a/configuration/templates/tasks/verify-hours-email.hbs
+++ b/configuration/templates/tasks/verify-hours-email.hbs
@@ -1,4 +1,4 @@
-{{#withExtend this type="verify-hours"}}
+{{#withExtend this type="hours-verify"}}
   [
   {{#eachJoin (distinct (pluck @root.data.tasksInfoUnverified "volunteer_manager_email")) ","~}}
     {
