--- a/configuration/partials/emails/admin-approval-body.html
+++ b/configuration/partials/emails/admin-approval-body.html
@@ -14,18 +14,6 @@
       padding: 0;
     }
 
-    .ReadMsgBody {
-      width: 100%;
-    }
-
-    .ExternalClass {
-      width: 100%;
-    }
-
-    .ExternalClass * {
-      line-height: 100%;
-    }
-
     body {
       margin: 0;
       padding: 0;
@@ -54,19 +42,6 @@
       margin: 13px 0;
     }
   </style>
-  <!--[if !mso]><!-->
-  <style type="text/css">
-    @media only screen and (max-width:480px) {
-      @-ms-viewport {
-        width: 320px;
-      }
-
-      @viewport {
-        width: 320px;
-      }
-    }
-  </style>
-  <!--<![endif]-->
   <!--[if mso]>
         <xml>
         <o:OfficeDocumentSettings>
@@ -77,7 +52,7 @@
         <![endif]-->
   <!--[if lte mso 11]>
         <style type="text/css">
-          .outlook-group-fix { width:100% !important; }
+          .mj-outlook-group-fix { width:100% !important; }
         </style>
         <![endif]-->
   <style type="text/css">
@@ -89,15 +64,6 @@
     }
   </style>
   <style type="text/css">
-    @media only screen and (max-width:480px) {
-      table.full-width-mobile {
-        width: 100% !important;
-      }
-
-      td.full-width-mobile {
-        width: auto !important;
-      }
-    }
   </style>
 </head>
 
@@ -110,11 +76,11 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-    <div style="background:#ffffff;background-color:#ffffff;Margin:0px auto;max-width:600px;">
+    <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:600px;">
       <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
         <tbody>
           <tr>
-            <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;vertical-align:top;">
+            <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;">
               <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
@@ -129,11 +95,11 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#ffffff;background-color:#ffffff;Margin:0px auto;max-width:580px;">
+              <div style="background:#ffffff;background-color:#ffffff;margin:0px auto;max-width:580px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#ffffff;background-color:#ffffff;width:100%;">
                   <tbody>
                     <tr>
-                      <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;vertical-align:top;">
+                      <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;">
                         <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
@@ -143,25 +109,12 @@
                class="" style="vertical-align:top;width:560px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
                                 <td style="vertical-align:top;padding:0px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
-                                    <tr>
-                                      <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
-                                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                                          <tbody>
-                                            <tr>
-                                              <td style="width:192px;">
-                                                <img height="auto" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/volunteer_scotland_search.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;" width="192" />
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
-                                      </td>
-                                    </tr>
                                   </table>
                                 </td>
                               </tr>
@@ -199,11 +152,11 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="Margin:0px auto;max-width:580px;">
+              <div style="margin:0px auto;max-width:580px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
                   <tbody>
                     <tr>
-                      <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;vertical-align:top;">
+                      <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;">
                         <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
@@ -213,7 +166,7 @@
                class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
@@ -223,12 +176,12 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
                                           <p>Hello,</p>
-                                          <p>This is an request for admin validation from the Saltire Awards Website. {{first_name}} {{last_name}}, has signed up as a Volunteer Group Administrator for the Saltire Awards.</p>
+                                          <p>This is an request for approval from the Saltire Awards website. {{first_name}} {{last_name}}, has signed up as a Group Administrator for the Saltire Awards.</p>
                                           <p>Please check with your records that this user is an appropriate person to be administrating Saltire Awards volunteer groups, and if so, click the link below.</p>
                                           <a href="{{verification_url}}" color="#42842A" style="color:#42842A;font-weight:bold;">I give permission for {{first_name}} {{last_name}} to use the Saltire Awards Website as a Group Administrator</a>
                                           <p>Thank you</p>
                                           <p>The Saltire Awards Team</p>
-                                          <p>This email was automatically generated by the <a href="http://www.saltireawards.org.uk" title="Saltire Awards" target="_blank">Saltire Awards</a> Website</p>
+                                          <p>This email was automatically generated by the <a href="http://www.saltireawards.org.uk" title="Saltire Awards" target="_blank">Saltire Awards</a> website</p>
                                         </div>
                                       </td>
                                     </tr>
@@ -269,11 +222,11 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#D7D3CC;background-color:#D7D3CC;Margin:0px auto;max-width:580px;">
+              <div style="background:#D7D3CC;background-color:#D7D3CC;margin:0px auto;max-width:580px;">
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#D7D3CC;background-color:#D7D3CC;width:100%;">
                   <tbody>
                     <tr>
-                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;vertical-align:top;">
+                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;">
                         <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
@@ -283,7 +236,7 @@
                class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
@@ -292,21 +245,9 @@
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
                                         <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#ffffff;">
-                                          <p style="margin:0px;"> &#169; {{momentFormat (moment) "YYYY"}} Volunteer Development Scotland Ltd. (also known as Volunteer Scotland) is a registered Scottish charity No. SC013740 and a company limited by guarantee, registered in Scotland, No. SC106743. Our registered Office is Jubilee House, Forthside Way, Stirling. FK8 1QZ. </p>
+                                          <p style="margin:0px;">
+                                          </p>
                                         </div>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
-                                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                                          <tbody>
-                                            <tr>
-                                              <td style="width:125px;">
-                                                <img height="auto" src="https://www.volunteerscotland.net/media/333407/volunteer_scotland_hi-res_png.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;" width="125" />
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
                                       </td>
                                     </tr>
                                   </table>
