--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -68,7 +68,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
     var password = $password.val();
     evt.preventDefault();
     saltireawards.auth.signInEmailPassword(email, password).then(function(user) {
-      // window.location.href = '/';
+      window.location.href = '/';
     }).catch(function(err) {
       $message.html(err.message+' <a href="/reset-password">Reset password</a>').show();
       $emailIcon.removeClass('loading');
